Add comments Some general documentation

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
+    <!-- Contents of the navigation view -->
+    <!-- One of these is selected -->
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
@@ -22,6 +23,7 @@
             android:title="Tools" />
     </group>
 
+    <!-- Communicate is a devider -->
     <item android:title="Communicate">
         <menu>
             <item
