--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,8 +20,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!-- Main content under header -->
     <include layout="@layout/content_main" />
 
+    <!-- Button for adding files to Aurora -->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
