--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -1,39 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- The main view for the ViewHolder of the RecyclerView -->
+<?xml version="1.0" encoding="utf-8"?><!-- The main view for the ViewHolder of the RecyclerView -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginLeft="15dp"
-    app:cardCornerRadius="6dp"
-    app:cardElevation="6dp">
+    android:layout_marginLeft="@dimen/fc_margin_horizontal"
+    android:layout_marginTop="@dimen/fc_margin_vertical"
+    android:layout_marginRight="@dimen/fc_margin_horizontal"
+    app:cardCornerRadius="@dimen/fc_corner_radius"
+    app:cardElevation="@dimen/fc_elevation">
 
     <!-- This LinearLayout holds and orders all TextView from one card -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center_vertical"
-        android:padding="20dp">
+        android:orientation="vertical"
+        android:padding="@dimen/fc_individual_padding">
 
         <TextView
             android:id="@+id/tv_card_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textSize="@dimen/fc_large_text"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_card_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:textSize="14sp"
-            android:textStyle="italic"
-            android:text="Details about file"/>
+            android:text="Details about file"
+            android:textSize="@dimen/fc_small_text"
+            android:textStyle="italic" />
     </LinearLayout>
 
     <!-- The 'Open' button -->
@@ -42,12 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_margin="20dp"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
+        android:layout_margin="@dimen/fc_open_button_margin"
+        android:background="@drawable/rounded_button"
+        android:elevation="@dimen/fc_elevation"
         android:text="@string/button_open"
         android:textAllCaps="false"
-        android:elevation="6dp"
-        android:background="@drawable/rounded_button"/>
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
 </android.support.v7.widget.CardView>
