--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Default screen margins, per Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+
+    <!-- Floating action button margins -->
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- File card dimentions in main menu -->
+    <dimen name="fc_margin_vertical">20dp</dimen>
+    <dimen name="fc_margin_horizontal">15dp</dimen>
+    <dimen name="fc_corner_radius">6dp</dimen>
+    <dimen name="fc_elevation">6dp</dimen>
+    <dimen name="fc_individual_padding">20dp</dimen>
+    <dimen name="fc_large_text">18sp</dimen>
+    <dimen name="fc_small_text">14sp</dimen>
+    <dimen name="fc_open_button_margin">20dp</dimen>
 
     <!-- Enlarge the icon in the FloatingActionButton -->
     <dimen name="design_fab_image_size" tools:override="true">42dp</dimen>
