--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/fc_margin_horizontal"
+    android:layout_marginLeft="@dimen/fc_margin_horizontal"
+    android:layout_marginRight="@dimen/fc_margin_horizontal"
     android:layout_marginTop="@dimen/fc_margin_vertical"
     app:cardCornerRadius="@dimen/fc_corner_radius"
     app:cardElevation="@dimen/fc_elevation">
