--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!-- The main view for the ViewHolder of the RecyclerView -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_file"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/fc_margin_horizontal"
@@ -10,8 +11,9 @@
     app:cardElevation="@dimen/fc_elevation">
 
     <!-- This LinearLayout holds the whole content of the cardview -->
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/cv_fl_base_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <!-- This LinearLayout holds and orders all TextView from one card -->
@@ -54,7 +56,7 @@
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
 
-    </LinearLayout>
+    </FrameLayout>
 
 
 </android.support.v7.widget.CardView>
