--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -57,6 +57,11 @@
             android:textSize="18sp" />
 
     </FrameLayout>
+    <!-- Include file detail content -->
+    <include
+        layout="@layout/card_file_detail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </android.support.v7.widget.CardView>
