--- a/app/src/main/res/layout/card_file_detail.xml
+++ b/app/src/main/res/layout/card_file_detail.xml
@@ -2,9 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cv_fl_detail"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
+    android:paddingBottom="1000dp"
     android:visibility="gone">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:textColor="#FFFFFFFF"
+        android:text="Details of file" />
 
 </FrameLayout>
