--- a/app/src/main/res/layout/card_file_detail.xml
+++ b/app/src/main/res/layout/card_file_detail.xml
@@ -3,16 +3,15 @@
     android:id="@+id/cv_fl_detail"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:paddingBottom="1000dp"
     android:visibility="gone">
 
+    <!-- TODO: Fill in details screen with neccessary views -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:textColor="#FFFFFFFF"
         android:text="Details of file" />
 
 </FrameLayout>
