--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,8 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
-        android:paddingBottom="20dp"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:paddingBottom="20dp">
 
     </android.support.v7.widget.RecyclerView>
 
