--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -24,11 +24,13 @@
             android:orientation="vertical"
             android:padding="@dimen/fc_individual_padding">
             <!-- File name -->
+            <!-- Gravity "start" in stead of "left".
+            Users might use right to left text flow. -->
             <TextView
                 android:id="@+id/tv_card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:textSize="@dimen/fc_large_text"
                 android:textStyle="bold" />
             <!-- Details about file -->
@@ -36,7 +38,7 @@
                 android:id="@+id/tv_card_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:text="@string/file_details"
                 android:textSize="@dimen/fc_small_text"
                 android:textStyle="italic" />
@@ -47,7 +49,7 @@
             android:id="@+id/button_card_file"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_margin="@dimen/fc_open_button_margin"
             android:background="@drawable/rounded_button"
             android:elevation="@dimen/fc_elevation"
