--- a/app/src/main/res/layout/card_file_detail.xml
+++ b/app/src/main/res/layout/card_file_detail.xml
@@ -12,6 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="Details of file" />
+        android:text="@string/file_details" />
 
 </FrameLayout>
