--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
         android:angle="135"
-        android:centerColor="@color/colorPrimary"
-        android:endColor="@color/colorAccent"
         android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimaryLight"
+        android:centerColor="@color/colorPrimary"
         android:type="linear" />
 </shape>
