--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#880E4F</color>
     <color name="colorPrimaryDark">#560027</color>
-    <color name="colorAccent">#BC477B</color>
+    <color name="colorPrimaryLight">#BC477B</color>
+    <color name="colorAccent1">#0e8884</color>
+    <color name="colorAccent2">#0e4f88</color>
     <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
