--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/action_search"
         android:orderInCategory="100"
         android:title="@string/action_search"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always" />
 </menu>
