--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#880E4F</color>
-    <color name="colorPrimaryDark">#560027</color>
-    <color name="colorPrimaryLight">#BC477B</color>
+    <color name="colorPrimary">#38006b</color>
+    <color name="colorPrimaryDark">#1B0036</color>
+    <color name="colorPrimaryLight">#9c4dcc</color>
+    <color name="colorButton">#6a1b9a</color>
     <color name="colorAccent1">#0e8884</color>
-    <color name="colorAccent2">#0e4f88</color>
+    <color name="colorAccent2">#D50000</color>
     <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
