--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="fc_large_text">18sp</dimen>
     <dimen name="fc_small_text">14sp</dimen>
     <dimen name="fc_open_button_margin">20dp</dimen>
+    
+    <!-- Search prompt values -->
+    <dimen name="sp_padding">10dp</dimen>
 </resources>
