--- a/app/src/main/res/layout/card_file.xml
+++ b/app/src/main/res/layout/card_file.xml
@@ -11,38 +11,59 @@
     app:cardElevation="@dimen/fc_elevation">
 
     <!-- This LinearLayout holds the whole content of the cardview -->
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/cv_fl_base_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- This LinearLayout holds and orders all TextView from one card -->
-        <LinearLayout
+        <!-- File name -->
+        <!-- Gravity "start" in stead of "left".
+            Users might use right to left text flow. -->
+        <TextView
+            android:id="@+id/tv_card_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textSize="@dimen/fc_large_text"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Description of the file -->
+        <TextView
+            android:id="@+id/tv_card_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/file_description"
+            android:textSize="@dimen/fc_small_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />
+
+        <!-- Details of the file -->
+        <TextView
+            android:id="@+id/tv_card_more_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="@dimen/fc_individual_padding">
-            <!-- File name -->
-            <!-- Gravity "start" in stead of "left".
-            Users might use right to left text flow. -->
-            <TextView
-                android:id="@+id/tv_card_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:textSize="@dimen/fc_large_text"
-                android:textStyle="bold" />
-            <!-- Details about file -->
-            <TextView
-                android:id="@+id/tv_card_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="@string/file_details"
-                android:textSize="@dimen/fc_small_text"
-                android:textStyle="italic" />
-        </LinearLayout>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/file_more_details"
+            app:layout_constraintBottom_toBottomOf="@+id/cv_fl_base_card"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_description" />
+
+        <!-- Include file detail content -->
+        <include
+            layout="@layout/card_file_detail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="@id/cv_fl_base_card"
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_description" />
 
         <!-- The 'Open' button -->
         <Button
@@ -51,19 +72,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="@dimen/fc_open_button_margin"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_button"
             android:elevation="@dimen/fc_elevation"
             android:text="@string/button_open"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
-    <!-- Include file detail content -->
-    <include
-        layout="@layout/card_file_detail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
