--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,15 +20,33 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- RecyclerView used for the recent files in the main view -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_files"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_recycler_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_gradient"
-        android:paddingBottom="20dp"
-        android:clipToPadding="false">
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <!-- RecyclerView used for the recent files in the main view -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_files"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_gradient"
+            android:clipToPadding="false"
+            android:paddingBottom="20dp" />
+
+        <!-- TextView which is visible when the RecyclerView is empty -->
+        <TextView
+            android:id="@+id/tv_empty_recent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_gradient"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="@string/empty_recent"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
