--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,10 @@
     <dimen name="fc_large_text">18sp</dimen>
     <dimen name="fc_small_text">14sp</dimen>
     <dimen name="fc_open_button_margin">20dp</dimen>
+
+    <!-- Start screen -->
+    <!-- This is the same as a default FloatingActionButton -->
+    <dimen name="arrow_icon">56dp</dimen>
     
     <!-- Search prompt values -->
     <dimen name="sp_padding">10dp</dimen>
