--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,10 @@
     <dimen name="fc_large_text">18sp</dimen>
     <dimen name="fc_small_text">14sp</dimen>
     <dimen name="fc_open_button_margin">20dp</dimen>
-    
+
     <!-- Search prompt values -->
     <dimen name="sp_padding">10dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
