--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,8 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- Plugin Market values -->
+    <dimen name="market_plugin_logo">100dp</dimen>
+    <dimen name="market_plugin_name">25dp</dimen>
 </resources>
