--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,6 @@
     <dimen name="text_margin">16dp</dimen>
 
     <!-- Plugin Market values -->
-    <dimen name="market_plugin_logo">100dp</dimen>
-    <dimen name="market_plugin_name">25dp</dimen>
+    <dimen name="market_plugin_logo">100sp</dimen>
+    <dimen name="market_plugin_name">25sp</dimen>
 </resources>
