--- a/app/src/main/res/layout/marketplugin_list.xml
+++ b/app/src/main/res/layout/marketplugin_list.xml
@@ -9,6 +9,6 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.aurora.market.MarketPluginListActivity"
+    tools:context="com.aurora.market.ui.MarketPluginListActivity"
     tools:listitem="@layout/marketplugin_list_content"
     android:backgroundTint="@color/colorPrimaryDark"/>
