--- a/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
+++ b/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
@@ -4,18 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--
-    <ImageView
-        android:id="@+id/alertDialogItemImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-        -->
 
-    <TextView
-        android:id="@+id/alertDialogItemTextView"
+    <ImageView
+        android:id="@+id/pluginChooserDialogItemLogoItemImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:padding="16dp"/>
+        android:src="@mipmap/ic_launcher"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <TextView
+            android:id="@+id/pluginChooserDialogItemNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollHorizontally="false"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/pluginChooserDialogItemDescriptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollHorizontally="false"
+            android:textSize="12sp"/>
+    </LinearLayout>
 
 </LinearLayout>
