--- a/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
+++ b/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
+            android:text="@string/plugin_name"
             android:textSize="16sp"/>
 
         <TextView
@@ -28,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
+            android:text="@string/plugin_description"
             android:textSize="12sp"/>
     </LinearLayout>
 
