Finish custom chooser and request info from packages instead of registry

--- a/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
+++ b/app/src/main/res/layout/plugin_alert_dialog_adapter_row.xml
@@ -2,27 +2,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="8dp">
 
 
     <ImageView
         android:id="@+id/pluginChooserDialogItemLogoItemImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxWidth="64dp"
+        android:maxHeight="64dp"
+        android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingLeft="8dp">
         <TextView
             android:id="@+id/pluginChooserDialogItemNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
             android:text="@string/plugin_name"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/pluginChooserDialogItemDescriptionTextView"
@@ -30,7 +35,7 @@
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
             android:text="@string/plugin_description"
-            android:textSize="12sp"/>
+            android:textSize="14sp"/>
     </LinearLayout>
 
 </LinearLayout>
