--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <cache-path path="." name="cache" />
+    <cache-path path="." name="cache"/>
+    <external-path name="external_files" path="."/>
 </paths>
