--- a/app/src/main/res/layout/marketplugin_detail.xml
+++ b/app/src/main/res/layout/marketplugin_detail.xml
@@ -1,10 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/marketplugin_detail"
-    style="?android:attr/textAppearanceLarge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
-    tools:context="com.aurora.market.ui.MarketPluginDetailFragment" />
+    tools:context="com.aurora.market.ui.MarketPluginDetailFragment">
+
+    <ImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:scaleType="fitEnd"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_version_input"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_creator_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/creator"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        style="?android:attr/textAppearanceLarge"/>
+
+    <TextView
+        android:id="@+id/tv_creator_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/market_text_input"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_creator_title"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_version_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/version"
+        app:layout_constraintTop_toBottomOf="@+id/tv_creator_input"
+        app:layout_constraintStart_toStartOf="parent"
+        style="?android:attr/textAppearanceLarge"/>
+
+    <TextView
+        android:id="@+id/tv_version_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/market_text_input"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_version_title"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
+    <TextView
+        android:id="@+id/tv_description_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_version_input"
+        style="?android:attr/textAppearanceLarge"/>
+
+    <TextView
+        android:id="@+id/tv_description_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/market_text_input"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+</android.support.constraint.ConstraintLayout>
