--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorAccent2">#D50000</color>
     <color name="ic_launcher_background">#FFFFFF</color>
     <color name="alpha_grey">#DD000000</color>
+    <color name="background_pink">#D6B6E6</color>
 </resources>
