--- a/app/src/main/res/drawable/inset_dialog.xml
+++ b/app/src/main/res/drawable/inset_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/rounded_button"
+    android:drawable="@drawable/rounded_alert"
     android:insetLeft="16dp"
     android:insetRight="16dp">
 
