--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin"
+    android:background="@drawable/background_cropped"
     tools:context=".FeedbackActivity">
 
     <EditText
         android:id="@+id/et_feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:backgroundTint="@android:color/white"
         android:gravity="top"
         android:hint="@string/feedback_edittext_hint"
         android:inputType="textMultiLine"
         android:maxLines="10"
-        android:minLines="10" />
+        android:minLines="10"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -26,6 +30,6 @@
         android:onClick="onFeedbackClick"
         android:text="@string/feedback_send"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"/>
 
 </LinearLayout>
