--- a/app/src/main/res/layout-w900dp/marketplugin_list.xml
+++ b/app/src/main/res/layout-w900dp/marketplugin_list.xml
@@ -18,8 +18,7 @@
     
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/marketplugin_list"
         android:name="com.aurora.aurora.MarketPluginListFragment"
         android:layout_width="@dimen/item_width"
