--- a/app/src/main/res/layout/marketplugin_list_content.xml
+++ b/app/src/main/res/layout/marketplugin_list_content.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/cv_plugin_market"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/fc_margin_horizontal"
-        android:layout_marginTop="@dimen/fc_margin_vertical"
-        android:layout_marginRight="@dimen/fc_margin_horizontal"
-        app:cardCornerRadius="@dimen/fc_corner_radius"
-        app:cardElevation="@dimen/fc_elevation">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/fc_margin_horizontal"
+    android:layout_marginTop="@dimen/fc_margin_vertical"
+    android:layout_marginRight="@dimen/fc_margin_horizontal"
+    app:cardCornerRadius="@dimen/fc_corner_radius"
+    app:cardElevation="@dimen/fc_elevation">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,7 +24,8 @@
                 android:src="@drawable/ic_nav_help"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/plugin_logo_description" />
 
         <TextView
                 android:id="@+id/content"
