--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,10 +4,8 @@
       tools:showIn="navigation_view">
     <!-- Contents of the navigation view -->
     <!-- One of these is selected -->
-    <group
-        android:id="@+id/main_menu_top">
+    <group>
         <item
-            android:id="@+id/nav_home"
             android:icon="@drawable/ic_nav_home"
             android:title="@string/home"/>
         <item
@@ -15,8 +13,7 @@
             android:icon="@drawable/ic_nav_help"
             android:title="@string/help_feedback"/>
     </group>
-    <group
-        android:id="@+id/main_menu_bottom">
+    <group>
         <item
             android:id="@+id/nav_plugin_market"
             android:icon="@drawable/ic_shopping_cart_black"
