--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Default screen margins, per Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -15,19 +15,15 @@
     <dimen name="fc_margin_horizontal">10dp</dimen>
     <dimen name="fc_corner_radius">6dp</dimen>
     <dimen name="fc_elevation">6dp</dimen>
-    <dimen name="fc_individual_padding">20dp</dimen>
     <dimen name="fc_large_text">20sp</dimen>
     <dimen name="fc_small_text">14sp</dimen>
-    <dimen name="fc_open_button_margin">20dp</dimen>
     <dimen name="fc_padding">15dp</dimen>
 
 
     <!-- Start screen -->
     <!-- This is the same as a default FloatingActionButton -->
-    <dimen name="arrow_icon">56dp</dimen>
 
     <!-- Search prompt values -->
-    <dimen name="sp_padding">10dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
